1998-04-23  Tanaka Akira  <akr@jaist.ac.jp>

	* eword-decode.el (eword-encoded-word-prefix-regexp): New constant.
	(eword-encoded-word-suffix-regexp): New constant.
	(eword-encoded-text-in-unstructured-regexp): New constant.
	(eword-encoded-word-in-unstructured-regexp): New constant.
	(eword-after-encoded-word-in-unstructured-regexp): New constant.
	(eword-decode-entire-string): New function.
	(eword-decode-unstructured): Use `eword-decode-entire-string'.
	(eword-decode-comment): Use `eword-decode-entire-string'.
	(eword-decode-quoted-string): Use `eword-decode-entire-string'.
	(eword-decode-string): Add optional argument `default-mime-charset'.
	(eword-decode-region): Add optional argument `default-mime-charset'.
	(eword-decode-header): Refine `code-conversion' treatment.

1998-04-21  Tanaka Akira  <akr@jaist.ac.jp>

	* eword-decode.el (eword-decode-header): code-conversion is now
	effective again.

1998-04-21  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* eword-decode.el (eword-decode-quoted-encoded-word): Use
 	'defcustom.

1998-04-21  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* eword-decode.el (eword-decode-sticked-encoded-word): Use
 	'defcustom.

1998-04-21  Tanaka Akira  <akr@jaist.ac.jp>

	* VERSION.FLAM: New file.

1998-04-17  Tanaka Akira  <akr@jaist.ac.jp>

	* Sync up with flim-1_0_0 to flim-1_0_1.

1998-04-17  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* mime-def.el (mime-spadework-module-version-string): New
 	constant.

	* eword-encode.el: Abolish constant 'eword-encode-version.

	* eword-decode.el: Abolish constant 'eword-decode-version.

1998-04-17  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* eword-encode.el (eword-encode-divide-into-charset-words): Use
	'char-length or 'char-next-index instead of 'char-bytes.
	(tm-eword::encode-string-1): Use 'char-next-index instead of
	'char-bytes.

1998-04-17  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* mel.el (base64-dl-module): Must check base64.so actually exists.

1998-04-13  Tanaka Akira  <akr@jaist.ac.jp>
